# alarm-clock

./: .gitignore  README.md  build_ui.bat  config.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  pyproject.toml
resources/examples/: run_with_other_music.bat
src/alarm_clock/: __init__.py  config.py  main.py
src/alarm_clock/ui/: mainwindow.py  mainwindow.ui  mainwindow_ui.py
ui/: build_ui.bat  mainwindow.py  mainwindow.ui  mainwindow_ui.py
